--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    background-color: rgb(245,245,245);
 }
 
 .container{
@@ -12,5 +13,10 @@ body{
 
 .nav-container{
   margin: auto;
+  
+}
+
+a{
+  text-decoration: none;
   
 }
